# sknobs

./: .gitignore  ACKNOWLEDGEMENTS.md  INSTALL.md  README.md
0.26.4_ampere/: README
0.26.4_ampere/include/: sknobs.h
0.26.4_ampere/src/: INSTALL  RELEASE_NOTES
0.26.4_ampere/src/doc/: README
0.26.4_ampere/src/include/: sknobs.h
0.26.4_ampere/src/src/: Makefile
0.26.4_ampere/src/src/c/: sknobs.c
0.26.4_ampere/src/src/perl/: Makefile
0.26.4_ampere/src/src/python/: Makefile  setup.py  sknobs_ext.c  testsknobs
0.26.4_ampere/src/src/python3/: MANIFEST.in  Makefile  setup.py  sknobs_ext.c
0.26.4_ampere/src/src/tcl/: Makefile  README  testsknobs
0.26.4_ampere/src/src/vera/: Makefile  sknobs.vr  sknobs.vri  sknobsdc.c  testsknobs.vr
0.26.4_ampere/src/src/verilog/: Makefile  sknobs.tab  sknobsvpi.c  testsknobs.knobsrc  testsknobs_vpi.sv
legacy_notes/: RELEASE_NOTES  knobs.odt
src/: Makefile
src/c/: Makefile  sknobs.c  sknobs.h  test000.knobs  test001.knobs  test002.knobs  test003.knobs  test004.knobs  test005.knobs  test006.knobs  test007.knobs  test008.knobs  test009.knobs  test00a.knobs  test00b.knobs  test00c.knobs  test00d.knobs  test00e.knobs  test00f.knobs  testknobs.saved  testsknobs.c
src/perl/: Makefile  Makefile.PL  sknobs.i
src/perl/t/: sknobs.t
src/python/: Makefile  setup.cfg  setup.py  sknobs_ext.c  testsknobs
src/tcl/: Makefile  sknobs.h  sknobs.i  sknobs_wrap.c  testsknobs
src/verilog/: Makefile  sknobs.sv  sknobsvpi.c  testsknobs.knobs  testsknobs_dpi.sv  testsknobs_vpi.sv
