[metadata]
name = sknobs
version = 1.1
description = Simulation Knobs
long_description = file: README.md
license = Apache
license_files =
   ../../LICENSE
maintainer = Jayanto Minocha
maintainer_email = jayantom@users.noreply.github.com
url = https://github.com/jayantom/sknobs
classifiers =
  Development Status :: 5 - Production/Stable
  Environment :: Console
  Intended Audience :: Developers
  License :: OSI Approved :: Apache Software License
  Operating System :: POSIX
  Programming Language :: C
  Programming Language :: Python :: 2
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.6
  Programming Language :: Perl
  Programming Language :: Tcl
  Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)

[options]
zip_safe = False
include_package_data = True
packages = find:

